--- a/src/main/resources/HexEditor.fxml
+++ b/src/main/resources/HexEditor.fxml
@@ -70,16 +70,16 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
           <items>
-            <MenuItem mnemonicParsing="false" text="Undo" />
-            <MenuItem mnemonicParsing="false" text="Redo" />
+            <MenuItem mnemonicParsing="false" onAction="#onUndo" text="Undo" />
+            <MenuItem mnemonicParsing="false" onAction="#onRedo" text="Redo" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Cut" />
-            <MenuItem mnemonicParsing="false" text="Copy" />
-            <MenuItem mnemonicParsing="false" text="Paste" />
-            <MenuItem mnemonicParsing="false" text="Delete" />
+            <MenuItem mnemonicParsing="false" onAction="#onCut" text="Cut" />
+            <MenuItem mnemonicParsing="false" onAction="#onCopy" text="Copy" />
+            <MenuItem mnemonicParsing="false" onAction="#onPaste" text="Paste" />
+            <MenuItem mnemonicParsing="false" onAction="#onDelete" text="Delete" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Select All" />
-            <MenuItem mnemonicParsing="false" text="Unselect All" />
+            <MenuItem mnemonicParsing="false" onAction="#onSelectAll" text="Select All" />
+            <MenuItem mnemonicParsing="false" onAction="#onUnselectAll" text="Unselect All" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Help">
